--- a/src/app/npcs/npc/npc.component.html
+++ b/src/app/npcs/npc/npc.component.html
@@ -16,19 +16,21 @@
         <p>Click the <span style="font-size: 2rem;">&#9861;</span> to reroll a field. Click "Save" to save any changes.</p>
         <form id="npcEditForm" (ngSubmit)="saveNPC($event)">
             <div *ngFor="let field of schema.fields">
-            <mat-form-field appearance="outline">
-                <mat-label>{{ field.label }}</mat-label>
-                <ng-container [ngSwitch]="field.key">
-                <textarea *ngSwitchCase="'notes'" rows=5 matInput id="{{ field.key }}" name="{{ field.key }}">{{ npc[field.key] }}</textarea>
-                <input *ngSwitchDefault matInput id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ npc[field.key] }}" />
-                </ng-container>
-                <button matSuffix type="button" class="btn-reroll" *ngIf="field.key !== 'notes'" (click)="reroll(field.key)" aria-label="Reroll" attr.aria-controls="{{ field.key }}">&#9861;</button>
-            </mat-form-field>
+                <div class="formField">
+                    <label for="{{ field.key }}">{{ field.label }}</label>
+                    <ng-container [ngSwitch]="field.key">
+                        <textarea *ngSwitchCase="'notes'" rows=5 id="{{ field.key }}" name="{{ field.key }}">{{ npc[field.key] }}</textarea>
+                        <div *ngSwitchDefault class="fieldReroll">
+                            <input *ngSwitchDefault id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ npc[field.key] }}" autocomplete="off" />
+                            <button type="button" class="btn-reroll" *ngIf="field.key !== 'notes'" (click)="reroll(field.key)" aria-label="Reroll" attr.aria-controls="{{ field.key }}">&#9861;</button>
+                        </div>
+                    </ng-container>
+                </div>
             </div>
             <div>
                 <button type="submit">Save Changes</button>
                 <button type="button" (click)="toggleEdit()">Cancel Edit</button>
-                <button type="button" class="deleteBtn" (click)="deleteNPC()">Delete NPC</button>
+                <button type="button" class="btn-delete" (click)="deleteNPC()">Delete NPC</button>
             </div>
         </form>
     </div>
