--- a/src/app/roller/roller.component.css
+++ b/src/app/roller/roller.component.css
@@ -1,7 +1,7 @@
 :host {
     display: block;
     padding: .5rem;
-    border: 1px dotted goldenrod;
+    border: 1px dotted var(--primary);
     border-radius: 5px;
     font-size: 1.125rem;
     background-color: white;
@@ -16,15 +16,4 @@
 
 button {
     font-size: inherit;
-    background-color: lightgoldenrodyellow;
-    background-color: rgb(252, 250, 230); /** FCFAE6 */
-    color: black;
-    border: 1px solid goldenrod;
-    border-radius: 5px;
-    padding: .25rem .5rem;
-    cursor: pointer;
-}
-button:hover {
-    background-color: goldenrod;
-    color: white;
 }
