--- a/src/app/tables/table-multi/table-multi.component.css
+++ b/src/app/tables/table-multi/table-multi.component.css
@@ -5,46 +5,37 @@
     margin-bottom: .25rem;
 }
 
-details {
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    padding: .5rem;
-}
-summary {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    padding: 0rem;
-    align-items: center;
-}
-summary .summary-title {
-    font-weight: bold;
-    font-size: 1rem;
-}
-details summary .summary-title::before {
-    content: "▲";
-    margin-right: .5rem;
-    font-size: .8rem;
-}
-details[open] summary .summary-title::before {
-    content: "▼";
-}
 table {
     box-sizing: border-box;
     border-collapse: collapse;
     border: none;
     width: 100%;
     margin-top: 1rem;
+    border-radius: 5px;
 }
 table td, table th {
     padding: .25rem;
     border: none;
 }
 table thead tr {
-    background-color: lightgrey;
+    background-color: var(--primary);
     font-weight: bold;
 }
 
+/* border radius only works on cells, so this complication to soften the edges. */
+table thead tr th:first-child {
+    border-top-left-radius: 5px;
+}
+table thead tr th:last-child {
+    border-top-right-radius: 5px;
+}
+table tbody tr:last-child td:first-child {
+    border-bottom-left-radius: 5px;
+}
+table tbody tr:last-child td:last-child {
+    border-bottom-right-radius: 5px;
+}
+
 table tbody tr:nth-child(even) {
-    background-color: #eee;
+    background-color: var(--surface1);
 }
