--- a/src/app/tables/tables-list/tables-list.component.css
+++ b/src/app/tables/tables-list/tables-list.component.css
@@ -1,8 +1,8 @@
 :host {
     border-radius: 0 0 0 5px;
-    border: 0 solid darkkhaki;
+    border: 0 solid var(--secondary);
     border-width: 0 0 1px 1px;
-    background-color: rgb(252, 250, 230);
+    background-color: var(--surface3);
     box-shadow: -2px 7px 10px rgba(50, 50, 0, 0.5);
 }
 :host[aria-expanded=false] {
