--- a/src/styles.css
+++ b/src/styles.css
@@ -3,50 +3,232 @@
  *
  #0F2263 very dk blue
  */
-html { height: 100%; }
+:root {
+    --primary-hue: 43;
+    --primary-saturation: 74%;
+    --primary-lightness: 49%;
+
+    background-color: hsl(120, 100%, 20%);
+
+    /* --secondary-hue: 266;
+    --secondary-saturation: 74%;
+    --secondary-lightness: 49%; */
+    --secondary-hue: 120;
+    --secondary-saturation: 100%;
+    --secondary-lightness: 20%;
+
+
+    /* --contrast: hsl(266, 74%, 49%); */
+
+    --primary-light: hsl(var(--primary-hue) var(--primary-saturation) var(--primary-lightness));
+    --secondary-light: hsl(var(--secondary-hue) var(--secondary-saturation) var(--secondary-lightness));
+    --text1-light: hsl(var(--primary-hue) var(--primary-saturation) 9%);
+    --text2-light: hsl(var(--primary-hue) 50% 11%);
+    /* --text3-light: hsl(var(--secondary-hue) var(--secondary-saturation) 30%); */
+    --text3-light: hsl(var(--secondary-hue) var(--secondary-saturation) 20%);
+    --surface1-light: hsl(var(--primary-hue) 50% 94%);
+    --surface2-light: hsl(var(--primary-hue) 50% 98%);
+    /* --surface3-light: hsl(var(--secondary-hue) 20% 92%); */
+    --surface3-light: hsl(var(--secondary-hue) 20% 95%);
+    --surface4-light: hsl(var(--primary-hue) var(--primary-saturation) 85%);
+    --surface5-light: hsl(var(--secondary-hue) 50% 75%);
+    --surface6-light: hsl(var(--secondary-hue) 50% 50%);
+    --surface-shadow-light: var(--primary-hue) 10% 20%;
+    --shadow-strength-light: .02;
+
+    /* --color-bg-lt: rgb(252, 250, 230);
+    --color-bg-med: rgba(218, 165, 32, 0.3);
+    --color-bg-dk: hsl(43, 74%, 49%);
+    --color-action-dk: rgb(89, 60, 143);
+    --color-action-dk2: rgb(54, 36, 86);
+    --color-action-warn: rgb(178, 34, 34);
+    --color-action-warn-dk: rgb(120, 44, 2);
+    --color-text-alt: hsl(43, 89%, 38%); */
+
+
+
+    color-scheme: light;
+    --primary: var(--primary-light);
+    --secondary: var(--secondary-light);
+    --text1: var(--text1-light);
+    --text2: var(--text2-light);
+    --text3: var(--text3-light);
+    --surface1: var(--surface1-light);
+    --surface2: var(--surface2-light);
+    --surface3: var(--surface3-light);
+    --surface4: var(--surface4-light);
+    --surface5: var(--surface5-light);
+    --surface6: var(--surface6-light);
+    --surface-shadow: var(--surface-shadow-light);
+    --shadow-strength: var(--shadow-strength-light);
+}
+/*
+@media (prefers-color-scheme: dark) {
+    :root {
+      color-scheme: dark;
+
+      --primary: var(--primary-dark);
+      --text1: var(--text1-dark);
+      --text2: var(--text2-dark);
+      --surface1: var(--surface1-dark);
+      --surface2: var(--surface2-dark);
+      --surface3: var(--surface3-dark);
+      --surface4: var(--surface4-dark);
+      --surface-shadow: var(--surface-shadow-dark);
+      --shadow-strength: var(--shadow-strength-dark);
+    }
+}
+*/
+* {
+    box-sizing: border-box;
+}
+html {
+    height: 100%;
+}
 body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     margin: 0;
     padding: 0;
     height: 100vh;
-    background-color: rgb(252, 250, 230); /* #FCFAE6 */
+    width: 100vw;
+    overflow-x: hidden;
+    background-color: var(--surface2);
+    color: var(--text2);
 }
-a {
-    color: rgb(89, 60, 143); /* 593c8f */
-}
-a:visited {
-    color: rgb(89, 60, 143);
+a, a:visited {
+    color: var(--text3);
+    text-decoration-style: double;
 }
 
+
 button {
-    background-color: #eee;
-    background-color: rgb(252, 250, 230);
-    border: 1px solid goldenrod; /** rgb(218,165,32);  #daa520 */
+    background-color: var(--surface4);
+    border: 2px solid transparent;
     border-radius: 5px;
     font-size: .9rem;
     padding: .5rem 1rem;
     cursor: pointer;
 }
 header button {
-    background-color: white;
+    /* background-color: white; */
 }
 header button, summary button, th button {
     padding: .25rem .5rem;
 }
-button:hover {
-    background-color: goldenrod;
-    color: black;
+button:hover, button:focus {
+    border: 2px dashed var(--primary);
+}
+button:focus {
+    outline-offset: 2px;
 }
 button + button {
     margin-left: 1rem;
 }
 button[type=submit] {
-    background-color: rgb(89, 60, 143);
-    border-color: #362456;
-    color: white;
+    background-color: var(--surface5);
+    border-color: transparent;
+    color: var(--text1);
 }
-button.deleteBtn {
-    background-color: #B22222;
-    border-color: #782c02;
-    color: white;
+button[type=submit]:hover, button[type=submit]:focus {
+    background-color: var(--surface6);
+    border: 2px dashed var(--secondary);
+}
+button.btn-delete {
+    background-color: hsl(17 74% 40%);
+    color: var(--surface2);
+}
+button.btn-delete:hover, button.btn-delete:focus {
+    border-color: var(--text1);
+}
+button.btn-reroll {
+    background-color: transparent;
+    font-size: 2rem;
+    border: none;
+    padding: 0 1rem;
+    margin: 0;
+    cursor: pointer;
+}
+
+
+h1, h2, h3, h4, h5, h6 {
+    color: var(--text1);
+}
+
+dt {
+    font-weight: bold;
+}
+
+details {
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    padding: .5rem;
+    background-color: var(--surface2);
+}
+summary {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 0rem;
+    align-items: center;
+}
+details summary .summary-title::before {
+    content: "▲";
+    margin-right: .5rem;
+    font-size: .8rem;
+    color: var(--text1);
+}
+details[open] summary .summary-title::before {
+    content: "▼";
+    color: var(--text1);
+}
+summary .summary-title {
+    font-weight: bold;
+    font-size: 1rem;
+    color: var(--text1);
+}
+details .body {
+    margin-top: .5rem;
+}
+
+.formField {
+    margin-bottom: 1rem;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+    font-size: 1rem;
+    margin-bottom: .25rem;
+}
+input, textarea {
+    display: block;
+    font-family: inherit;
+    width: 100%;
+    font-size: 1rem;
+    padding: .5rem;
+    border-radius: 5px;
+    border: 1px solid var(--secondary);
+}
+input[type="text"] {
+
+}
+div.fieldReroll {
+    display: flex;
+}
+div.fieldReroll input, div.fieldReroll textarea {
+    border-radius: 5px 0px 0px 5px;
+}
+div.fieldReroll button.btn-reroll {
+    border-radius: 0px 5px 5px 0px;
+    border: 1px solid var(--secondary);
+    border-left-width: 0;
+    background-color: var(--surface5);
+}
+
+
+.mat-dialog-container {
+    background-color: var(--surface2);
+}
+.mat-dialog-content {
+    background-color: var(--surface1);
 }
