feat(import/export): Basic functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
             <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
             <li><a routerLink="/intro" routerLinkActive="active">Intro</a></li>
             <li><a routerLink="/rules" routerLinkActive="active">Rules</a></li>
+            <li><a routerLink="/settings" routerLinkActive="active">Settings</a></li>
             <li><a href="#" (click)="toggleTable($event)">Tables</a></li>
           </ul>
     </nav>
