--- a/src/app/pages/rules-page/rules-page.component.html
+++ b/src/app/pages/rules-page/rules-page.component.html
@@ -1,5 +1,5 @@
 
-<h2 id="header">Rules (If you need them)</h2>
+<h2 id="rulesheader">Rules (If you need them)</h2>
 <section id="creation">
     <h3>Character creation</h3>
     <ol>
