--- a/src/app/pages/rules-page/rules-page.component.css
+++ b/src/app/pages/rules-page/rules-page.component.css
@@ -57,17 +57,33 @@ ol ol > li {
 
 table {
     border-collapse: collapse;
-    border: 1px solid;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--surface2);
 }
 table td, table th {
     padding: .25rem;
     border: none;
 }
 table thead tr {
-    background-color: lightgrey;
+    background-color: var(--primary);
     font-weight: bold;
 }
 
+/* border radius only works on cells, so this complication to soften the edges. */
+table thead tr th:first-child {
+    border-top-left-radius: 5px;
+}
+table thead tr th:last-child {
+    border-top-right-radius: 5px;
+}
+table tbody tr:last-child td:first-child {
+    border-bottom-left-radius: 5px;
+}
+table tbody tr:last-child td:last-child {
+    border-bottom-right-radius: 5px;
+}
+
 table tbody tr:nth-child(even) {
-    background-color: #eee;
+    background-color: var(--surface1);
 }
