--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -1,6 +1,7 @@
 <h2 class="header">Settings</h2>
 
 <section id="import">
+    <p>Data is currently stored in your browser's local storage. To use on other browsers or devices you must export then import.</p>
     <section>
         <h3>Export Data</h3>
 
