--- a/src/styles.css
+++ b/src/styles.css
@@ -151,6 +151,7 @@ button.btn-reroll {
 h1, h2, h3, h4, h5, h6 {
     color: var(--text1);
     font-weight: bold;
+    font-family: serif;
 }
 
 dt {
@@ -158,10 +159,11 @@ dt {
 }
 
 details {
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    /* box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12); */
     border-radius: 4px;
     padding: .5rem;
     background-color: var(--surface2);
+    border: 1px solid var(--surface4);
 }
 summary {
     list-style: none;
