--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,6 +6,8 @@
         "footer footer";
     grid-template-rows: min-content auto min-content;
     height: 100vh;
+    width: 100%; /** Instead of 100vw because of scroll bars...?  */
+    overflow-x: hidden;
 }
 
 header#header {
@@ -65,6 +67,7 @@ main {
 
 
 #tables {
+    visibility: hidden; /* Keeps from focusing inside. */
     position: absolute;
     top: 0;
     right: 0;
@@ -76,6 +79,7 @@ main {
 }
 #tables[aria-expanded=true] {
     transform: none;
+    visibility: visible; /* Allows focus when open */
 }
 
 footer {
@@ -87,30 +91,4 @@ footer {
 }
 footer p {
     margin: 0;
-}
-
-
-.brand .swatch { background: var(--primary-light) }
-.text1 .swatch { background: var(--text1-light) }
-.text2 .swatch { background: var(--text2-light) }
-.surface1 .swatch { background: var(--surface1-light) }
-.surface2 .swatch { background: var(--surface2-light) }
-.surface3 .swatch { background: var(--surface3-light) }
-.surface4 .swatch { background: var(--surface4-light) }
-.shadow .swatch { background: hsl(var(--surface-shadow-light) / var(--shadow-strength-light)) }
-
-figure {
-  display: flex;
-  gap: 1ch;
-  place-items: center;
-  font-size: 2rem;
-  font-weight: 200;
-}
-
-.swatch {
-  flex-shrink: 0;
-  inline-size: 3ch;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  box-shadow: inset 0 0 0 1px hsl(0 0% 50% / 25%);
 }
