--- a/src/app/tables/results-modal/results-modal.component.css
+++ b/src/app/tables/results-modal/results-modal.component.css
@@ -1,9 +1,5 @@
-
-
-form {
-    margin: 1rem 0;
-}
-select {
-    padding: .5rem;
-    margin-left: 1rem;
+app-table-result {
+    display: block;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid var(--primary);
 }
