--- a/src/app/tables/results-modal/results-modal.component.html
+++ b/src/app/tables/results-modal/results-modal.component.html
@@ -2,11 +2,10 @@
 
 <mat-dialog-content>
   <app-table-result [table]="table" [resultSet]="resultSet"></app-table-result>
-  <hr/>
   <form id="addNoteForm" (ngSubmit)="onSubmit($event)">
-    <div>
-      <label for="note_uuid">Add To Note:</label>
-      <select id="note_uuid" matInput name="note_uuid">
+    <div class="formField">
+      <label for="note_uuid">Add To Note</label>
+      <select id="note_uuid" name="note_uuid">
           <option value="">Create New Note</option>
           <option *ngFor="let note of notes" value="{{ note.id }}">{{ note.title }}</option>
       </select>
