--- a/src/styles.css
+++ b/src/styles.css
@@ -80,16 +80,12 @@
 * {
     box-sizing: border-box;
 }
-html {
-    height: 100%;
-}
 body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     margin: 0;
     padding: 0;
     height: 100vh;
     width: 100vw;
-    overflow-x: hidden;
     background-color: var(--surface2);
     color: var(--text2);
 }
@@ -204,7 +200,7 @@ label {
     font-size: 1rem;
     margin-bottom: .25rem;
 }
-input, textarea {
+input, textarea, select {
     display: block;
     font-family: inherit;
     width: 100%;
