--- a/src/app/towns/town-edit-modal/town-edit-modal.component.html
+++ b/src/app/towns/town-edit-modal/town-edit-modal.component.html
@@ -2,12 +2,12 @@
 
 <mat-dialog-content>
   <p>Click the <span style="font-size: 2rem;">&#9861;</span> to reroll a field. Click "Save" to save any changes.</p>
-  <form id="townEditForm" (ngSubmit)="onSubmit($event)">
+  <form id="townEditForm" (submit)="onSubmit($event)">
     <div *ngFor="let field of town.schema.fields">
         <div class="formField" *ngIf="field.type !== 'long'; else elseBlock">
           <label for="{{ field.key }}">{{ field.label }}</label>
           <div class="fieldReroll">
-            <input id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ town.fields[field.key] }}" />
+            <input id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ town.fields[field.key] }}" [attr.required]="field.key === 'townName' ? 'required' : null" />
             <button type="button" class="btn-reroll" (click)="reroll(field.key)" aria-label="Reroll">&#9861;</button>
           </div>
         </div>
