--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -1,5 +1,7 @@
 <h2 class="header">Settings</h2>
 
+<p>For more code, bugs, plans, and other details see <a href="https://github.com/derikb/hadleyville-online">the github page</a>.</p>
+
 <section id="import">
     <p>Data is currently stored in your browser's local storage. To use on other browsers or devices you must export then import.</p>
     <section>
