refactor: more cleanup and minor fixes

--- a/src/app/pages/intro-page/intro-page.component.html
+++ b/src/app/pages/intro-page/intro-page.component.html
@@ -5,6 +5,13 @@
     <p>This game is about players taking on a character (or characters) in a small frontier settlement in the Old West.</p>
 </section>
 
+<section id="theapp">
+    <h2>About the App</h2>
+
+    <p>This web application is designed as a web version of the game content that will also manage the generation of random table results and note taking.</p>
+    <p>To see the code, or for bugs, plans, and other details go to <a href="https://github.com/derikb/hadleyville-online">the github page</a>.</p>
+</section>
+
 <section id="usingtables">
     <h2>Using Random Tables</h2>
 
