feat: New table items, new rules

--- a/src/app/pages/rules-page/rules-page.component.html
+++ b/src/app/pages/rules-page/rules-page.component.html
@@ -87,8 +87,10 @@
     <h3>Injury and Death</h3>
     <p>In case of violence:</p>
     <ol>
-        <li>Average player characters can take 4 wounds.</li>
-        <li>Lesser NPCs will only take 1 wound.</li>
+        <li>Unimportant NPCs take 1 shot.</li>
+        <li>Minor NPCs take 1 shot, but may stay alive long enough for one last scene (i.e. say who killed them, admit a secret, tell someone they love them, etc.) and may survive if there's a doctor at hand.</li>
+        <li>Tough NPCs and Weak PCs take 2 shots, but after the first they are disadvantaged.</li>
+        <li>Tougher PCs take 3 shots, but after the second they are disadvantaged.</li>
         <li>Most damage is 1 wound. Go higher for better successes on appropriate actions or for more dangerous situations.</li>
         <li>At 0 wounds you are incapacitated. You probably also took some kind of ongoing or permanent injury.</li>
         <li>Death happens if appropriate to the situation/context/narrative.</li>
