--- a/src/app/npcs/npc/npc.component.html
+++ b/src/app/npcs/npc/npc.component.html
@@ -6,11 +6,15 @@
         </div>
     </summary>
     <div *ngIf="!isEdit">
-    <ul>
-        <li *ngFor="let field of npc.getFieldNames()">
-            {{ getFieldLabel(field) }} {{ npc[field] }}
-        </li>
-    </ul>
+        <ul>
+            <li *ngFor="let field of npc.getFieldNames()">
+                {{ getFieldLabel(field) }} {{ npc.getFieldDisplay(field) }}
+            </li>
+        </ul>
+        <div *ngIf="npc.notes !== ''">
+            <strong id="npc_{{ npc.uuid }}_notes">Notes</strong>
+            <div [attr.aria-labelledby]="'npc_' +npc.uuid + '_notes'" [innerHTML]="npc.getFieldDisplay('notes')"></div>
+        </div>
     </div>
     <div *ngIf="isEdit">
         <p>Click the <span style="font-size: 2rem;">&#9861;</span> to reroll a field. Click "Save" to save any changes.</p>
@@ -18,14 +22,15 @@
             <div *ngFor="let field of schema.fields">
                 <div class="formField">
                     <label for="{{ field.key }}">{{ field.label }}</label>
-                    <ng-container [ngSwitch]="field.key">
-                        <textarea *ngSwitchCase="'notes'" rows=5 id="{{ field.key }}" name="{{ field.key }}">{{ npc[field.key] }}</textarea>
-                        <div *ngSwitchDefault class="fieldReroll">
-                            <input *ngSwitchDefault id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ npc[field.key] }}" autocomplete="off" />
-                            <button type="button" class="btn-reroll" *ngIf="field.key !== 'notes'" (click)="reroll(field.key)" aria-label="Reroll" attr.aria-controls="{{ field.key }}">&#9861;</button>
-                        </div>
-                    </ng-container>
+                    <div class="fieldReroll">
+                        <input id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ npc[field.key] }}" autocomplete="off" />
+                        <button type="button" class="btn-reroll" (click)="reroll(field.key)" aria-label="Reroll" attr.aria-controls="{{ field.key }}">&#9861;</button>
+                    </div>
                 </div>
+            </div>
+            <div class="formField">
+                <label for="notes">Notes</label>
+                <textarea rows=5 id="notes" name="notes">{{ npc.notes }}</textarea>
             </div>
             <div>
                 <button type="submit">Save Changes</button>
