feat(ui): Collapse all button for npcs/notes

--- a/src/app/npcs/npcs-list/npcs-list.component.html
+++ b/src/app/npcs/npcs-list/npcs-list.component.html
@@ -1,6 +1,7 @@
 <header>
     <h2>NPCs</h2>
     <div>
+        <button type="button" class="btn-collapse" (click)="collapseAll()" aria-label="Collapse All">▲</button>
         <button type="button" (click)="createNPC()">Create NPC</button>
     </div>
 </header>
