--- a/src/app/notes/notes-list/notes-list.component.html
+++ b/src/app/notes/notes-list/notes-list.component.html
@@ -1,6 +1,7 @@
 <header>
     <h2>Notes</h2>
     <div>
+        <button type="button" class="btn-collapse" (click)="collapseAll()" aria-label="Collapse All">▲</button>
         <button type="button" (click)="createNote()">Create Note</button>
     </div>
 </header>
