--- a/src/style.css
+++ b/src/style.css
@@ -441,3 +441,16 @@ main > .text-page {
 .dialog-body form {
     margin-top: 2rem;
 }
+
+/**
+    If this is in the component, the transition triggers late and you see the draw close on page load.
+*/
+had-tabledrawer {
+    visibility: hidden; /* Keeps from focusing inside. */
+    transform: translate(100%, 0);
+    transition: all 0.4s ease-in-out;
+}
+had-tabledrawer[aria-expanded=true] {
+    transform: none;
+    visibility: visible; /* Allows focus when open */
+}
