refactor: Finish Angular removal
all features should be restored and working now

Closes #9

--- a/src/style.css
+++ b/src/style.css
@@ -161,7 +161,6 @@ dt {
 }
 
 details {
-    /* box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12); */
     border-radius: 4px;
     padding: .5rem;
     background-color: var(--surface2);
@@ -174,17 +173,17 @@ summary {
     padding: 0rem;
     align-items: center;
 }
-details summary .summary-title::before {
+details summary #summary-title::before {
     content: "▲";
     margin-right: .5rem;
     font-size: .8rem;
     color: var(--text1);
 }
-details[open] summary .summary-title::before {
+details[open] summary #summary-title::before {
     content: "▼";
     color: var(--text1);
 }
-summary .summary-title {
+summary #summary-title {
     font-weight: bold;
     font-size: 1rem;
     color: var(--text1);
@@ -329,36 +328,36 @@ main > .text-page {
     font-size: 1rem;
 }
 
-.rules-page table {
+table {
     border-collapse: collapse;
     border: none;
     border-radius: 5px;
     background-color: var(--surface2);
 }
-.rules-page table td, .rules-page table th {
+table td, table th {
     padding: .25rem;
     border: none;
 }
-.rules-page table thead tr {
+table thead tr {
     background-color: var(--primary);
     font-weight: bold;
 }
 
 /* border radius only works on cells, so this complication to soften the edges. */
-.rules-page table thead tr th:first-child {
+table thead tr th:first-child {
     border-top-left-radius: 5px;
 }
-.rules-page table thead tr th:last-child {
+table thead tr th:last-child {
     border-top-right-radius: 5px;
 }
-.rules-page table tbody tr:last-child td:first-child {
+table tbody tr:last-child td:first-child {
     border-bottom-left-radius: 5px;
 }
-.rules-page table tbody tr:last-child td:last-child {
+table tbody tr:last-child td:last-child {
     border-bottom-right-radius: 5px;
 }
 
-.rules-page table tbody tr:nth-child(even) {
+table tbody tr:nth-child(even) {
     background-color: var(--surface1);
 }
 
