--- a/src/style.css
+++ b/src/style.css
@@ -221,10 +221,15 @@ input, textarea, select {
     border-radius: 5px;
     border: 1px solid var(--secondary);
 }
+fieldset {
+    border: none;
+    border-bottom: 1px solid var(--secondary);
+    margin-bottom: 1rem;
+}
 div.fieldReroll {
     display: flex;
 }
-div.fieldReroll input, div.fieldReroll textarea {
+div.fieldReroll input, div.fieldReroll textarea, div.fieldReroll select {
     border-radius: 5px 0px 0px 5px;
 }
 div.fieldReroll button.btn-reroll {
